--- a/paimon-web-ui/src/views/dataIntergration/components/list/index.module.scss
+++ b/paimon-web-ui/src/views/dataIntergration/components/list/index.module.scss
@@ -15,21 +15,6 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License. */
 
-export default {
-  playground: 'Playground',
-  metadata: 'MetaData',
-  cdc_ingestion: 'CDC Ingestion',
-  system: 'System',
-  light: 'Light',
-  dark: 'Dark',
-  cancel: 'Cancel',
-  confirm: 'Confirm',
-  user: 'User',
-  role: 'Role',
-  cluster: 'Cluster',
-  dataimport: 'Data Import',
-  dataintergration: 'Data Intergration',
-  datamodel: 'Data Module',
-  offline_sync: 'Offline Sync',
-  realtime_sync: 'Realtime Sync',
+.list-page {
+  width: 100%;
 }
